change fonts on mobile (seo) fix bug on author page

--- a/web/app/themes/Foody/resources/sass/common/_foody-post.scss
+++ b/web/app/themes/Foody/resources/sass/common/_foody-post.scss
@@ -79,7 +79,7 @@ $content-width: 95%;
 
           &::placeholder {
             opacity: 0.5;
-            font-size: 12px;
+            font-size: 16px;
             text-align: right;
             color: #4a4a4a;
           }
